src/objects/ints__TUCR_Inquiry__c.object
<CustomObject>
    <fields>
        <fullName>ints__Date__c</fullName>
        <label>Date</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ints__MemberCode__c</fullName>
        <label>Member Code</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ints__MemberName__c</fullName>
        <label>Member Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ints__TransUnion_Credit_Report__c</fullName>
        <label>TransUnion Credit Report</label>
        <referenceTo>ints__TransUnion_Credit_Report__c</referenceTo>
        <relationshipName>Inquiries</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>TUCR Inquiry</label>
    <nameField>
        <displayFormat>TUCR_INQ-{000000000}</displayFormat>
        <label>Inquiry Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>TUCR Inquiries</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>